# crime

./: .env.example  .gitignore  Makefile  README.md  crime-data-client.js  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
2024/: coverage.json
config/: offense_mapping.yaml  settings.yaml  sources.yaml
data/raw/census/: sample_acs_zcta_population.csv
data/raw/crime/: sample_city_crime.csv
data/raw/geography/: sample_zcta.geojson
data/server/: crime-data-client.js  manifest.json
docs/: granular-zcta-ingestion-pipeline.md
notebooks/: 01_explore_raw_crime.ipynb  02_validate_zcta_assignment.ipynb  03_index_review.ipynb
scripts/: report_direct_coverage_gaps.py  run_all.ps1
src/crime_index/: __init__.py  cli.py  config.py  coverage.py  db.py  logging_config.py  modeling.py  static_bundle.py
src/crime_index/export/: __init__.py  export_geojson.py  export_tables.py
src/crime_index/geo/: geocode_optional.py  validate_geometry.py  zcta_assignment.py
src/crime_index/ingest/: census_loader.py  census_reporter.py  crime_loader.py  fbi_cde.py  geography_loader.py  source_downloader.py  zip_county_loader.py
src/crime_index/normalize/: __init__.py  dates.py  locations.py  normalize_crime.py  offense_classifier.py
tests/: test_aggregate.py  test_cli.py  test_crime_loader.py  test_dates.py  test_fbi_cde.py  test_index.py  test_locations.py  test_modeling.py  test_offense_classifier.py  test_rates.py  test_source_downloader.py  test_static_bundle.py  test_zcta_assignment.py  test_zip_county_loader.py
(+63080 files in other folders)
