[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crime-index"
version = "0.1.0"
description = "Local DuckDB pipeline for ZCTA-level crime counts, rates, indexes, and consumer scores."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "geopandas>=1.0",
  "pandas>=2.2",
  "pyarrow>=16",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "shapely>=2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
crime-index = "crime_index.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
